# OpenGLBasics

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Camera.h  OpenGLTutorial.sln  OpenGLTutorial.vcxproj  README.md  app.vcxproj.filters  camera.cpp  cmake_install.cmake  default.frag  default.vert  glad.c  main.cpp  shaderClass.cpp  shaderClass.h
Libraries/include/: shaderClass.h
Libraries/include/glad/: glad.h
Libraries/lib/: CMakeCache.txt  glfw3.lib
shaders/: default.frag
